--- a/src/components/reels/Reels.module.scss
+++ b/src/components/reels/Reels.module.scss
@@ -1,5 +1,6 @@
 @use '../../scss/variables' as *;
 @use '../../scss/mixins' as *;
+@use '../../scss/breakpoints' as *;
 
 .wrapper{
     width: 100%;
@@ -19,12 +20,21 @@
             display: flex;
             align-items: center;
             gap: $spacing-sm-3;
+            position: relative;
+
+            @include sm-screen{
+                width: 100%;
+            }
 
             .card{
                 height: 100%;
                 width: 350px;
                 border-radius: 1.5rem;
                 overflow: hidden;
+
+                @include sm-screen{
+                    width: 100%
+                }
 
                 video{
                     @include img;
@@ -35,6 +45,16 @@
                 display: flex;
                 flex-direction: column;
                 gap: $spacing-sm-3;
+
+                @include sm-screen{
+                    position: absolute;
+                    top: 50%;
+                    right: $spacing-sm-1;
+                    transform: translateY(-50%);
+                    background-color: $bg;
+                    padding: $spacing-sm-2;
+                    border-radius: 1.5rem;
+                }
 
                 .iconCol{
                     @include centerFlex;
@@ -55,11 +75,20 @@
                         border: 1px solid black;
                         border-radius: 50%;
                         cursor: pointer;
+
+                        @include sm-screen{
+                            font-size: $txt-sm-1;
+                        }
                     }
 
                     p{
                         font-size: $txt-sm-2;
+                        white-space: nowrap;
                         cursor: default;
+
+                        @include sm-screen{
+                            font-size: $txt-sm-1;
+                        }
                     }
                 }
             }
