--- a/src/components/navbar/Bottom.module.scss
+++ b/src/components/navbar/Bottom.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     gap: $spacing-nm-2;
-    font-size: $txt-sm-2;
+    
 
     @include custom-screen($breakpoint: 860px){
         justify-content: center;
@@ -20,7 +20,8 @@
         justify-content: flex-start;
         align-items: center;
         gap: $spacing-nm-2;
-        
+        font-size: $txt-sm-2;
+
         @include lg-screen{
             font-size: $txt-sm-1;
         }
@@ -38,7 +39,8 @@
         display: flex;
         align-items: center;
         gap: $spacing-sm-4;
-
+        font-size: $txt-nm-1;
+        
         .divider{
             padding-right: $spacing-nm-1;
             border-right: 1px solid $gray2;
